--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -2,21 +2,21 @@
  * Site header
  */
 .site-header {
-  border-top: 5px solid $grey-color-dark;
-  border-bottom: 1px solid $grey-color-light;
-  min-height: $spacing-unit * 1.865;
-  line-height: $base-line-height * $base-font-size * 2.25;
+  padding-top: 1.3em;
+  padding-bottom: 1em;
+  border-bottom: 2px solid $grey-color-light;
 
   // Positioning context for the mobile navigation icon
   position: relative;
 }
 
 .site-title {
-  @include relative-font-size(1.625);
+  // @include relative-font-size(1.625);
   font-weight: 300;
   letter-spacing: -1px;
   margin-bottom: 0;
   float: left;
+  max-height: 3rem;
 
   @include media-query($on-palm) {
     padding-right: 45px;
@@ -25,6 +25,12 @@
   &,
   &:visited {
     color: $grey-color-dark;
+  }
+
+  img {
+    display: inline;
+    max-height: 30px;
+    margin-right: 1rem;
   }
 }
 
@@ -36,6 +42,7 @@
   border: 1px solid $grey-color-light;
   border-radius: 5px;
   text-align: right;
+  padding: 0.5em 2em 0em 0em;
 
   .nav-trigger {
       display: none;
@@ -122,7 +129,7 @@
  * Site footer
  */
 .site-footer {
-  border-top: 1px solid $grey-color-light;
+  border-top: 2px solid $grey-color-light;
   padding: $spacing-unit 0;
 }
 
